# goit-ds-hw-01

./: pyproject.toml
2/: Dockerfile  bot.py  docker-compose.yml  requirements.txt
