[tool.poetry]
name = "bot"
version = "0.1.0"
description = "bot"
authors = ["Oleksiitaratynov <alxt0125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
